<resources>
    <string name="app_name">PeleadoresApiaryP2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_al_cargar">Error al cargar los detalles</string>
    <string name="peleador_eliminado">Peleador eliminado</string>
    <string name="error_al_eliminar">Error al eliminar peleador</string>
    <string name="error_conex">Error de conexión</string>
    <string name="user_example">user_example</string>
    <string name="peleador_favorito">Este es mi peleador favorito.</string>
    <string name="deshacer">Deshacer</string>
    <string name="disciplina_label">Disciplina: %1$s</string>
    <string name="disciplina_record">Record: %1$s</string>
    <string name="disciplina_titulos">Titulos: %1$s</string>
    <string name="splash_animation">Splash Animation</string>
    <string name="nombre_del_peleador">Nombre del Peleador</string>
    <string name="imagen_del_peleador">Imagen del peleador</string>
    <string name="disciplina_boxeo">Disciplina: Boxeo</string>
    <string name="record_27_5">Record: 27-5</string>
    <string name="t_tulos_campe_n_mundial">Títulos: Campeón mundial</string>
    <string name="biograf_a_del_peleador">Biografía del peleador</string>
    <string name="eliminar">Eliminar</string>
    <string name="mex">Mex</string>
    <string name="guantes_de_boxeo">Guantes de boxeo</string>
    <string name="peleador">Peleador</string>
    <string name="disciplina">Disciplina</string>
    <string name="r_cord">Récord</string>
    <string name="favorito">Favorito</string>
    <string name="nacimiento">Lugar de nacimiento:</string>
    <string name="error_mapa">Error al mostrar el mapa</string>
    <string name="error_estilo_del_mapa">No se pudo aplicar el estilo del mapa</string>
    <string name="lugar_de_nacimiento">Lugar de nacimiento: %1$s</string>
    <string name="bandera_de_m">Bandera de México</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="ingresa_tus_datos">Ingresa tus datos para continuar</string>
    <string name="correo">Correo electrónico</string>
    <string name="ejemplo_correo">ejemplo@correo.com</string>
    <string name="contrasena">Contraseña</string>
    <string name="olvidaste_tu_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="entrar">Entrar</string>
    <string name="aun_no_tienes_cuenta">¿Aún no tienes cuenta? Regístrate</string>
    <string name="aster">*******</string>
    <string name="bandera">Bandera de México</string>
    <string name="registrate">¡Regístrate, campeón!</string>
    <string name="confirmar_contrasena">Confirmar contraseña</string>
    <string name="crear_cuenta">¡Crear cuenta!</string>
    <string name="ese_correo_no_es_valido">¡Ese correo no es válido, Campeón!</string>
    <string name="seis_caracteres">¡La contraseña debe tener al menos 6 caracteres!</string>
    <string name="bienvenido_campeon">¡Bienvenido campeón! 🥊</string>
    <string name="correo_invalido">Correo inválido, campeón</string>
    <string name="las_contrase_as_no_coinciden">Las contraseñas no coinciden, campeón</string>
    <string name="cuenta_creada_con_exito">¡Cuenta creada con éxito! Ahora inicia sesión</string>
    <string name="correo_enviado_revisa_tu_bandeja">Correo enviado, revisa tu bandeja</string>
    <string name="salir">Salir</string>
    <string name="bandera_de_mexico">Bandera de México</string>
    <string name="recuperar_tu_contrasena">Recuperar tu contraseña</string>
    <string name="te_enviaremos_un_correo_si_el_correo_es_v_lido_campe_n">Te enviaremos un correo si el correo es válido, campeón.</string>
    <string name="tu_correo_electr_nico">Tu correo electrónico</string>
    <string name="enviar_el_correo">¡Enviar el correo!</string>
    <string name="volver_atras">Volver atrás</string>
</resources>