<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AuthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="24dp">

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:background="@drawable/background_mex">

            <ImageView
                android:id="@+id/ivFlag"
                android:layout_width="140dp"
                android:layout_height="90dp"
                android:layout_centerInParent="true"
                android:src="@drawable/boxing_letter_splash"
                android:contentDescription="@string/bandera_de_m"
                android:scaleType="fitCenter" />
        </RelativeLayout>

        <TextView
            android:id="@+id/titleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido"
            android:textSize="28sp"
            android:textColor="#C1272D"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-medium" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingresa_tus_datos"
            android:textColor="#777777"
            android:textSize="14sp"
            android:layout_marginBottom="24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textColor="#006341"
            android:textSize="14sp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_edittext_mex"
            android:hint="@string/ejemplo_correo"
            android:paddingHorizontal="16dp"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textColorHint="#AAAAAA" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contrasena"
            android:textColor="#006341"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_edittext_mex"
            android:hint="@string/aster"
            android:paddingHorizontal="16dp"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textColorHint="#AAAAAA" />
        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/olvidaste_tu_contrasena"
            android:textColor="#006341"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_gravity="end"
            android:clickable="true"
            android:focusable="true" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:text="@string/entrar"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/pacifico_regular"
            android:textSize="16sp"
            android:backgroundTint="#B71C1C"/>

        <TextView
            android:id="@+id/tvSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aun_no_tienes_cuenta"
            android:textColor="#006341"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_gravity="center" />
    </LinearLayout>
</ScrollView>
