<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_mex"
    android:padding="24dp">

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:gravity="center_horizontal">

<ImageView
    android:id="@+id/ivBandera"
    android:layout_width="120dp"
    android:layout_height="80dp"
    android:src="@drawable/iconmex"
    android:contentDescription="@string/bandera_de_mexico"
    android:layout_marginBottom="16dp"
    android:scaleType="fitCenter" />

<TextView
    android:id="@+id/tvTitleReset"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/recuperar_tu_contrasena"
    android:textSize="24sp"
    android:textStyle="bold"
    android:textColor="#006341"
    android:fontFamily="@font/anton_regular"
    android:layout_marginBottom="8dp" />

<TextView
    android:id="@+id/tvMessageReset"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/te_enviaremos_un_correo_si_el_correo_es_v_lido_campe_n"
    android:textColor="#DDDDDD"
    android:textSize="14sp"
    android:fontFamily="@font/anton_regular"
    android:layout_marginBottom="24dp"
    android:textAlignment="center" />

<EditText
    android:id="@+id/etEmailReset"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_marginTop="50dp"
    android:hint="@string/tu_correo_electr_nico"
    android:background="@drawable/bg_edittext"
    android:padding="12dp"
    android:inputType="textEmailAddress"
    android:textColor="#000"
    android:textColorHint="#999999"
    android:layout_marginBottom="16dp" />

<Button
    android:id="@+id/btnSendReset"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/enviar_el_correo"
    android:fontFamily="@font/pacifico_regular"
    android:textAllCaps="false"
    android:backgroundTint="#006341"
    android:textColor="#FFFFFF"
    android:layout_marginBottom="12dp" />

<Button
    android:id="@+id/btnBack"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/volver_atras"
    android:fontFamily="@font/pacifico_regular"
    android:textAllCaps="false"
    android:backgroundTint="#B71C1C"
    android:textColor="#FFFFFF" />
</LinearLayout>
    </ScrollView>
