<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_mex">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:src="@drawable/iconmex"
            android:contentDescription="@string/bandera"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrate"
            android:textSize="26sp"
            android:textColor="#006341"
        android:textStyle="bold"
        android:layout_marginBottom="24dp" />

        <EditText
            android:id="@+id/etEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/correo"
            android:background="@drawable/bg_edittext_mex"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="16dp"
            android:textColor="#000000"
            android:textColorHint="#888888"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/etPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/contrasena"
            android:background="@drawable/bg_edittext_mex"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:textColor="#000000"
            android:textColorHint="#888888"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/confirmar_contrasena"
            android:background="@drawable/bg_edittext_mex"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:textColor="#000000"
            android:textColorHint="#888888"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/btnRegisterConfirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/crear_cuenta"
            android:fontFamily="@font/pacifico_regular"
            android:textColor="#FFFFFF"
            android:backgroundTint="#006341"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volver_atras"
            android:fontFamily="@font/pacifico_regular"
            android:textAllCaps="false"
            android:backgroundTint="#B71C1C"
            android:textColor="#FFFFFF" />



    </LinearLayout>
</ScrollView>
