<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="16dp"
    card_view:cardCornerRadius="30dp"
    card_view:cardElevation="12dp"
    card_view:cardBackgroundColor="#3e3e42"
    tools:context=".ui.fragments.PeleadoresListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/ivImagen"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/peleador"
            android:src="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginEnd="1dp">

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_del_peleador"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/tvDisciplina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disciplina"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/tvRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_cord"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>
        <ImageView
            android:id="@+id/ivLike"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_favorite_empty"
            android:contentDescription="@string/favorito" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
