<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.fragments.PeleadorDetailFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
    android:id="@+id/glEnd"
    android:orientation="vertical"
    app:layout_constraintGuide_end="40dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05608755" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBottom"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBottomImgaen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBorderimage"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvNombre"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toStartOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@id/glTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_del_peleador"
        android:textSize="40sp"
        android:textAlignment="center"
        android:fontFamily="@font/anton_regular"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/background_gradient_mex"
        app:layout_constraintEnd_toStartOf="@id/glEnd"
        app:layout_constraintStart_toEndOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/tvNombre" />

    <WebView
        android:id="@+id/youtubeWebView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/imagen_del_peleador"
        app:layout_constraintBottom_toTopOf="@+id/glBottomImgaen"
        app:layout_constraintEnd_toStartOf="@id/glBorderimage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNombre" />

    <LinearLayout
        android:id="@+id/LyDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="start"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/glBottomImgaen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/glBorderimage"
        app:layout_constraintTop_toBottomOf="@id/tvNombre">

        <TextView
            android:id="@+id/tvDisciplina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pacifico_regular"
            android:text="@string/disciplina_boxeo"
            android:textColor="#1db976"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_27_5"
            android:textColor="@android:color/white"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tvTitulos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_tulos_campe_n_mundial"
            android:textColor="#c4301e"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvBiografia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textAlignment="center"
        android:text="@string/biograf_a_del_peleador"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/glBottomImgaen"
        app:layout_constraintStart_toEndOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        android:fontFamily="@font/anton_regular"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvLugarNacimientoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nacimiento"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="12sp"
        android:fontFamily="@font/anton_regular"
        app:layout_constraintTop_toBottomOf="@id/tvBiografia"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        android:layout_marginTop="2dp" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mapNacimiento"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvLugarNacimientoLabel"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintBottom_toTopOf="@id/glBottom"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/btnStart"
        android:text="@string/eliminar"
        android:textColor="#f4f4f4"
        android:textSize="15sp"
        android:backgroundTint="@color/design_default_color_error"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@id/mapNacimiento"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"/>

    <ImageView
        android:id="@+id/ivFavorite"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/mex"
        android:src="@drawable/iconmex"
        app:layout_constraintBottom_toTopOf="@+id/LyDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/glBorderimage"
        app:layout_constraintTop_toTopOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>
